--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -26,6 +26,60 @@
       color: #FF005C;
       margin-bottom: 20px; }
 
+section {
+  display: none; }
+
+aside {
+  display: flex;
+  flex-direction: column;
+  background-color: #FF005C;
+  position: absolute;
+  z-index: 1000;
+  box-shadow: 0px 0px 8px grey;
+  top: 0;
+  left: 0;
+  padding: 25px 20px;
+  height: 100vh;
+  justify-content: space-between; }
+  aside div {
+    width: 100%; }
+    aside div i {
+      float: right;
+      color: whitesmoke; }
+  aside h1 {
+    font-family: sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 40px;
+    line-height: 57px;
+    color: whitesmoke; }
+  aside input[type=text], aside input[type=email], aside input[type=password], aside input[type=number] {
+    width: 100%;
+    height: 40px;
+    padding: 5px;
+    border: none; }
+  aside input[type=text], aside input[type=email], aside input[type=password], aside input[type=number]::placeholder {
+    font-family: FontAwesome;
+    font-size: 18px;
+    color: grey; }
+  aside input[type=text], aside input[type=email], aside input[type=password], aside input[type=number]:focus {
+    outline: none; }
+  aside input[type=submit] {
+    font-family: sans-serif;
+    width: 25%;
+    height: 40px;
+    float: right;
+    background-color: whitesmoke;
+    font-size: 18px;
+    padding: 5px 8px;
+    border: none;
+    cursor: pointer; }
+
+@keyframes slidebar {
+  0% {
+    width: 0; }
+  100% {
+    width: 345px; } }
 /*media query for responsive*/
 @media screen and (max-width: 732px) {
   #img1 {
