--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -27,12 +27,19 @@
       margin-bottom: 20px; }
 
 section {
-  display: none; }
+  display: block; }
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 47%; }
 
 aside {
   display: flex;
   flex-direction: column;
   background-color: #FF005C;
+  width: 350px;
   position: absolute;
   z-index: 1000;
   box-shadow: 0px 0px 8px grey;
