--- a/css/styleSheet.scss
+++ b/css/styleSheet.scss
@@ -31,7 +31,7 @@
     }
 }
 section{
-    display: block;
+    display: none;
 }
 
 form{
@@ -104,7 +104,67 @@ aside{
     100%{width: 345px;}
 }
 
+/*loading animation start*/
+.loader-page{
+    width: 100vw;
+    min-height: 100vh;
+    place-items: center;
+    display: grid;
+    background-color: whitesmoke;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: hide 30s;
+    animation-delay: 4s;
+    animation-fill-mode: forwards;
+}
+@keyframes hide{
+    10%{opacity: 0;z-index: -1;}
+    100%{opacity: 0;z-index: -1;}
+}
 
+ul{
+    list-style: none;
+    display: flex;
+    border-bottom: 10px solid crimson;
+    border-radius: 10px;
+}
+
+ul li{
+    width: 40px;
+    height: 40px;
+    background-color: #3498db;
+    margin: auto 20px;
+    border-radius: 50%;
+    animation: bouncing 1s linear infinite;
+    animation-fill-mode: forwards;
+}
+
+@keyframes bouncing{
+    0%{transform: translateY(0);}
+    50%{transform: translateY(-150px);}
+    100%{transform: translateY(0);}
+}
+
+ul li:nth-child(2){
+    animation-delay: 0.2s;
+    background-color: #f1c40f;
+
+}
+ul li:nth-child(3){
+    animation-delay: 0.4s;
+    background-color: #e67e22;
+    
+}
+ul li:nth-child(4){
+    animation-delay: 0.6s;
+    background-color: #e74c3c;
+}
+ul li:nth-child(5){
+    animation-delay: 0.8s;
+    background-color: #2ecc71;
+}
+/*loading animation start*/
 
 /*media query for responsive*/
 @media screen and (max-width:732px){
