--- a/css/styleSheet.css
+++ b/css/styleSheet.css
@@ -57,9 +57,10 @@ aside {
     font-family: sans-serif;
     font-style: normal;
     font-weight: normal;
-    font-size: 40px;
+    font-size: 30px;
     line-height: 57px;
-    color: whitesmoke; }
+    color: whitesmoke;
+    text-align: right; }
   aside input[type=text], aside input[type=email], aside input[type=password], aside input[type=number] {
     width: 100%;
     height: 40px;
@@ -98,7 +99,7 @@ aside {
   top: 0;
   left: 0;
   animation: hide 30s;
-  animation-delay: 4s;
+  animation-delay: 3s;
   animation-fill-mode: forwards; }
 
 @keyframes hide {
